changes made to login and registration templates

--- a/templates/add_company.html
+++ b/templates/add_company.html
@@ -14,7 +14,7 @@
         {% endfor %}
         {% endif %}
 
-        <form class="form-login custom-form-login" method="post" action="/web/add_company/" enctype="multipart/form-data">
+        <form class="form-login custom-form-login" method="post" action="/add_company/" enctype="multipart/form-data">
 
             {% csrf_token %}
 
@@ -51,8 +51,3 @@
 
     </div>
     {% endblock %}
-
-
-
-
-
