--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -17,18 +17,18 @@
 {% endif %}
 
 <br><br>
-<a href="/web/logout">Logout</a><br><br>
-<a href="/web/dashboard">Dashboard</a><br><br><br><br>
-<a href="/web/free_field">Free Fields</a><br><br><br><br>
+<a href="/logout">Logout</a><br><br>
+<a href="/dashboard">Dashboard</a><br><br><br><br>
+<a href="/free_field">Free Fields</a><br><br><br><br>
 <h1>Premium Fields</h1><br><br>
-<a href="/web/basic_premium_field">Basic Premium Fields</a><br><br>
-<a href="/web/gallery">Click To add Gallery Images</a><br><br>
+<a href="/basic_premium_field">Basic Premium Fields</a><br><br>
+<a href="/gallery">Click To add Gallery Images</a><br><br>
 
-<a href="/web/brochure">Click add Brochure Brochure</a><br><br>
-<a href="/web/video_link">Click To Add Video Link</a><br><br>
-<a href="/web/location">Click to add you different Locations</a><br><br>
-<a href="/web/certification">Click to add your certifications</a><br><br>
-<a href="/web/social_link">Click to Add your social Links</a><br><br>
+<a href="/brochure">Click add Brochure Brochure</a><br><br>
+<a href="/video_link">Click To Add Video Link</a><br><br>
+<a href="/location">Click to add you different Locations</a><br><br>
+<a href="/certification">Click to add your certifications</a><br><br>
+<a href="/social_link">Click to Add your social Links</a><br><br>
 
 
 {% endblock %}
