--- a/templates/old-create_user_and_claim_company.html
+++ b/templates/old-create_user_and_claim_company.html
@@ -11,7 +11,7 @@
       <h3 class="text-center">Claim Your Company</h3>
 
 
-      <form id="form"  action="/web/create_user_and_claim_company/" method="post" enctype="multipart/form-data" >
+      <form id="form"  action="/create_user_and_claim_company/" method="post" enctype="multipart/form-data" >
 
         {% if error %}
         {% for errors in error %}
@@ -25,7 +25,7 @@
           <label for="company_name">Select The Company Name:</label>
           <input class="form-control" type="text" name="company_name" id="company_name" autocomplete="off" />
           <br>
-          <a href="/web/create_user_and_company">Register your company is it not present in the link</a>
+          <a href="/create_user_and_company">Register your company is it not present in the link</a>
           <div id="user_form">
 
             <div class="col-md-offset-3 col-md-8">
@@ -107,7 +107,7 @@
       $("#company_name").keypress(function () {
         var value_l = $("#company_name").val();
         if (value_l.length >= 1) {
-          $.get("/web/get_company", function (data) {
+          $.get("/get_company", function (data) {
             var $input = $('#company_name');
             $input.typeahead({
               source: data, autoSelect: false, displayText: function (item) {
