--- a/templates/test.html
+++ b/templates/test.html
@@ -6,7 +6,7 @@
 {% block content %}
 <h1 class="text-center">User and Company Details</h1>
 <div class="col-md-offset-3 col-md-6">
-  <form class="form-login custom-form-login" method="post" action="/web/test/?search=">
+  <form class="form-login custom-form-login" method="post" action="/test/?search=">
     {% csrf_token %}
     <div class="inner-addon left-addon">
       <input id="search_text" name="search_text" type="text" class="form-control" />
