--- a/templates/base1.html
+++ b/templates/base1.html
@@ -5,11 +5,15 @@
     <title>Oil & Gas</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/custom.css">
+
     <!-- <script src="static/js/jquery.js"></script> -->
     <script src="https://use.fontawesome.com/418c680b48.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-3-typeahead/4.0.1/bootstrap3-typeahead.min.js"></script>
-    
+    <script src="/static/js/custom.js"></script>
+    <!-- <script src="/static/js/jquery.js"></script> -->
 
     {% block custom_style %}
     {% endblock %}
