--- a/templates/check_company_old_to_be_deleted.html
+++ b/templates/check_company_old_to_be_deleted.html
@@ -14,7 +14,7 @@
         {% endfor %}
         {% endif %}
 
-        <form class="form-login custom-form-login" method="post" action="/web/check_company/" enctype="multipart/form-data">
+        <form class="form-login custom-form-login" method="post" action="/check_company/" enctype="multipart/form-data">
 
             {% csrf_token %}
 
@@ -26,13 +26,13 @@
         </form>
 
     </div>
-   
+
     {% block custom_script %}
     <script>
      function CompanyCheck()
      {
         // data
-        var csrftoken = Cookies.get('csrftoken'); 
+        var csrftoken = Cookies.get('csrftoken');
         var c_name = document.getElementById("company_name").value;
         // alert(csrftoken);
         // alert(c_name);
@@ -59,5 +59,5 @@
     }
     </script>
     {% endblock %}
-    
+
 {% endblock %}
