--- a/templates/landing.html
+++ b/templates/landing.html
@@ -18,8 +18,8 @@
 
 <br>
 
-<a href="/web/login">Login</a><br><br>
-<a href="/web/dashboard">Dashboard</a><br><br><br><br>
-<a href="/web/create_user_and_claim_company">Click to register your company</a>
+<a href="/login">Login</a><br><br>
+<a href="/dashboard">Dashboard</a><br><br><br><br>
+<a href="/create_user_and_claim_company">Click to register your company</a>
 
 {% endblock %}
