change password functionality added to template

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,61 +1,71 @@
-{% extends 'base.html' %}
+<style media="screen">
+  .form-container{
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+    -webkit-justify-content: center;
+    -moz-justify-content: center;
+        justify-content: center;
+    -webkit-align-items: center;
+        -moz-align-items: center;
+            align-items: center;
+            width: 100%
+  }
+</style>
 
-{% block custom_style %}
-{% endblock %}
-
-
-{% block content%}
-<div class="row">
-  <div class="col-md-offset-3 col-md-6">
-    <form id="change_password_form" action="/account/change-password/" method="post">
-      {%csrf_token%}
-      <div class="row">
-        <div class="col-xs-11">
-          <label for="id_old_password">Old Password:</label>
-          <input class="form-control" id="id_old_password" type="password" name="old_password" required>
-          <p class="text-danger" id="old_password_error"></p>
-          <p class="text-success" id="old_password_message"></p>
-        </div>
-        <div class="col-xs-1">
-          <br>
-          <img src="/static/gif/ajax-loader.gif" id="loader_old_password" hidden>
-        </div>
+<div class="form-container">
+  <div class="col-md-7" id="change_password_form" action="/account/change-password/" method="post">
+    <div class="box">
+      <div class="box-header">
+        <h2>Change Password</h2>
+        <small>Fill the form to submit login detail</small>
       </div>
+      <div class="box-divider m-a-0"></div>
+      <div class="box-body">
 
-      <div class="row">
-        <div class="col-xs-11">
-          <label for="id_password">New Password:</label>
-          <input class="form-control" id="id_password" type="password" name="password" required>
-          <p class="text-danger" id="password_error"></p>
-        </div>
-        <div class="col-xs-1">
-          <br>
-          <img src="/static/gif/ajax-loader.gif" hidden>
-        </div>
+        <form role="form">
+
+          <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-3 form-control-label">Old Password</label>
+            <div class="col-sm-9">
+              <input type="password" class="form-control" id="id_old_password" placeholder="Old password">
+              <img src="/static/gif/ajax-loader.gif" id="loader_old_password" hidden>
+              <p class="text-danger" id="old_password_error"></p>
+              <p class="text-success" id="old_password_message"></p>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-3 form-control-label">Old Password</label>
+            <div class="col-sm-9">
+              <input type="password" class="form-control" id="id_password" placeholder="New password">
+              <img src="/static/gif/ajax-loader.gif" id="loader_password" hidden>
+              <p class="text-danger" id="password_error"></p>
+              <p class="text-success" id="password_message"></p>
+            </div>
+          </div>
+
+          <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-3 form-control-label">Old Password</label>
+            <div class="col-sm-9">
+              <input type="password" class="form-control" id="id_confirm_password" placeholder="Confirm password">
+              <img src="/static/gif/ajax-loader.gif" id="loader_confirm_password" hidden>
+              <p class="text-danger" id="confirm_password_error"></p>
+              <p class="text-success" id="confirm_password_message"></p>
+            </div>
+          </div>
+
+          <div class="form-group row m-t-md">
+            <div class="col-sm-offset-2 col-sm-10">
+              <button type="submit" class="btn white">Submit</button>
+            </div>
+          </div>
+        </form>
       </div>
-
-      <div class="row">
-        <div class="col-xs-11">
-          <label for="id_confirm_password">Confirm Password:</label>
-          <input class="form-control" id="id_confirm_password" type="password" name="confirm_password" required>
-          <p class="text-danger" id="confirm_password_error"></p>
-        </div>
-        <div class="col-xs-1">
-          <br>
-          <img src="/static/gif/ajax-loader.gif" hidden >
-        </div>
-      </div>
-      <input class="form-control" type="submit" name="submit" value="submit">
-    </row>
-  </form>
-</div >
-
-<div class="col-md-3">
+    </div>
+    </div>
 </div>
-</div>
-{% endblock%}
 
-{% block custom_script %}
 <script>
 var old_password_check = false;
 var new_password_check = false;
@@ -128,7 +138,23 @@ $("#id_old_password").blur(function(){
         e.preventDefault();
         alert('Invalid form. Please reslove the errors.')
       }
-    }
-  });
+      else{
+        e.preventDefault();
+        $.post("/account/change-password/",{
+          'csrfmiddlewaretoken' : getCookie('csrftoken'),
+          'old_password' : $("#id_old_password").val(),
+          'password' : $("#id_password").val(),
+          'confirm_password' : $("#id_confirm_password").val() },
+          function(data, status){
+            // $("#loader_old_password").hide();
+            if (data == 'True'){
+              alert('password_changed');
+              window.location.href = '/dashboard/';
+            }else {
+              alert('server error');
+            }
+          });
+        }
+      }
+    });
   </script>
-  {% endblock %}
