added same validation in model and worked on video link

--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
                   <span class="nav-text">Dashboard</span>
                 </a>
               </li>
-              <!-- Accout Start -->
+              <!-- Account Start -->
               <li class="nav-header hidden-folded">
                 <small class="text-muted">User</small>
               </li>
@@ -160,14 +160,80 @@
                     </a>
                   </li>
                   <li>
-                    <a href="calendar.html" >
+                    <a href="#" >
                       <span class="nav-text">Change Password</span>
                     </a>
                   </li>
                 </ul>
               </li>
 
-              <!-- Accout End -->
+              <!-- FREE FIELDS -->
+              <li>
+                <a>
+                  <span class="nav-caret">
+                    <i class="fa fa-caret-down"></i>
+                  </span>
+                  <span class="nav-label">
+                    <b class="label rounded label-sm primary">5</b>
+                  </span>
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe5c3;
+                      <span ui-include="'../assets/images/i_1.svg'"></span>
+                    </i>
+                  </span>
+                  <span class="nav-text">Free Fields</span>
+                </a>
+                <ul class="nav-sub">
+                  <li>
+                    <a>
+                      <span class="nav-text">Basic Company Details</span>
+                    </a>
+                  </li>
+                  <li>
+                    <a>
+                      <span class="nav-text" id="free_field_button">Free Fields</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+
+              <!-- PREMIUM FIELDS -->
+              <li>
+                <a>
+                  <span class="nav-caret">
+                    <i class="fa fa-caret-down"></i>
+                  </span>
+                  <span class="nav-label">
+                    <b class="label rounded label-sm primary">5</b>
+                  </span>
+                  <span class="nav-icon">
+                    <i class="material-icons">&#xe5c3;
+                      <span ui-include="'../assets/images/i_1.svg'"></span>
+                    </i>
+                  </span>
+                  <span class="nav-text">Premium Fields</span>
+                </a>
+                <ul class="nav-sub">
+                  <li>
+                    <a>
+                      <span class="nav-text"></span>
+                    </a>
+                  </li>
+                  <li>
+                    <a>
+                      <span class="nav-text" id="basic_premium_field_button">Basic Premium Fields</span>
+                    </a>
+                  </li>
+
+                  <li>
+                    <a>
+                      <span class="nav-text" id="video_link_button">Video Link</span>
+                    </a>
+                  </li>
+                </ul>
+              </li>
+
+                            <!-- Company End -->
 
 
               <li>
