--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -1,3 +1,5 @@
+{% block main_area%}
+
 <style media="screen">
   .form-container{
     display: -webkit-flex;
@@ -14,17 +16,16 @@
 </style>
 
 <div class="form-container">
-  <div class="col-md-7" id="change_password_form" action="/account/change-password/" method="post">
+  <div class="col-md-7">
     <div class="box">
       <div class="box-header">
         <h2>Change Password</h2>
-        <small>Fill the form to submit login detail</small>
+        <small>Fill the form to change your password</small>
       </div>
       <div class="box-divider m-a-0"></div>
       <div class="box-body">
 
-        <form role="form">
-
+        <form role="form" id="change_password_form" action="/account/change-password/" method="post">
           <div class="form-group row">
             <label for="inputPassword3" class="col-sm-3 form-control-label">Old Password</label>
             <div class="col-sm-9">
@@ -32,7 +33,7 @@
               <img src="/static/gif/ajax-loader.gif" id="loader_old_password" hidden>
               <p class="text-danger" id="old_password_error"></p>
               <p class="text-success" id="old_password_message"></p>
-            </div>
+            </div
           </div>
 
           <div class="form-group row">
@@ -158,3 +159,4 @@ $("#id_old_password").blur(function(){
       }
     });
   </script>
+{% endblock %}
